<resources>
    <string name="app_name">Calculator</string>
    <string name="add_button_text">+</string>
    <string name="add_description">Podaj dwie liczby i wciśnij "+" aby policzyć sumę tych liczb</string>
    <string name="history_description">Historia operacji</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="subdivide">/</string>
    <string name="clear">C</string>
    <string name="history">H</string>
    <string name="clear_history">CH</string>
    <string name="wrong_expression_message">Błędne wyrażenie</string>
    <string name="no_history_message">Nie wykonano jeszcze żadnych operacji</string>
</resources>
