<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/zero"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dot"
        tools:text="@string/zero" />

    <Button
        android:id="@+id/four"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/four" />

    <Button
        android:id="@+id/seven"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/seven" />

    <Button
        android:id="@+id/eight"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintStart_toEndOf="@+id/seven"
        tools:text="@string/eight" />

    <Button
        android:id="@+id/nine"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/eight"
        tools:text="@string/nine" />

    <Button
        android:id="@+id/six"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/five"
        tools:text="@string/six" />

    <Button
        android:id="@+id/five"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintStart_toEndOf="@+id/four"
        tools:text="@string/five" />

    <Button
        android:id="@+id/three"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/two"
        tools:text="@string/three" />

    <Button
        android:id="@+id/one"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/one" />

    <Button
        android:id="@+id/two"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintStart_toEndOf="@+id/one"
        tools:text="@string/two" />

    <Button
        android:id="@+id/dot"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/dot" />

    <Button
        android:id="@+id/view"
        android:layout_width="198dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="calculateResult"
        android:text="@string/result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/zero"
        tools:text="@string/result" />

    <Button
        android:id="@+id/plus"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three"
        tools:text="@string/plus" />

    <Button
        android:id="@+id/minus"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six"
        tools:text="@string/minus" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine"
        tools:text="@string/multiply" />

    <Button
        android:id="@+id/divide"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="addValueToView"
        android:text="@string/subdivide"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clear_history"
        tools:text="@string/subdivide" />

    <Button
        android:id="@+id/clear"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="clearScreen"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/clear" />

    <Button
        android:id="@+id/history"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="displayHistory"
        android:text="@string/history"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintStart_toEndOf="@+id/clear"
        tools:text="@string/history" />

    <Button
        android:id="@+id/clear_history"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="clearHistory"
        android:text="@string/clear_history"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintStart_toEndOf="@+id/history"
        tools:text="@string/clear_history" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBottom_toTopOf="@+id/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:padding="8dp" />
</android.support.constraint.ConstraintLayout>